--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@ body {
 
 </head>
 <body >
-<h1 style="margin-top:30%; color:red"> Hello World </h1>
+<h1 style="margin-top:30%; color:red"> Hello Cat - better than dogs </h1>
 
 
 </body>
